--- a/20_css3ways/1_inline/index.html
+++ b/20_css3ways/1_inline/index.html
@@ -6,41 +6,26 @@
     <title>foo title</title>
   </head>
 
-  <body style="font-family:Sans;color:black;background-color:#333333">
-    <h1>foo heading 1</h1>
-    <h3>nav foo</h3>
-    <ul>
-      <li><a href="">dis</a></li>
-      <li><a href="">dat</a></li>
-      <li><a href="">de udda ting</a></li>
+  <body style="background-color: #7E7C7C; font-family:arial;">
+    <h1 style="text-align: center; background-color: #A8A6A6; font-size: 80px; color:white; padding: 10px; font-size: 60px;">h1 foo</h1>
+    <h3 style="float:left; margin-top: 5px; font-size: 30px;">nav foo</h3>
+    <ul style="float:left; clear:left; list-style-type: none; padding: 0px; margin-top: 0px">
+      <li><a href="" style="color: white; text-decoration:none; font-size: 20px; font-weight: 30px">dis</a></li>
+      <li><a href="" style="color: white; text-decoration:none; font-size: 20px; font-weight: 30px">dat</a></li>
+      <li><a href="" style="color: white; text-decoration:none; font-size: 20px; font-weight: 30px">de udda ting</a></li>
     </ul>
-    <h2>main foo heading</h2>
-    <p>
-On it differed repeated wandered required in. Then girl neat why yet knew rose spot. Moreover property we he kindness greatest be oh striking laughter. In me he at collecting affronting principles apartments. Has visitor law attacks pretend you calling own excited painted. Contented attending smallness it oh ye unwilling. Turned favour man two but lovers. Suffer should if waited common person little oh. Improved civility graceful sex few smallest screened settling. Likely active her warmly has. 
+    <h2 style="margin-left: 200px; font-size: 50px;">main foo heading</h2>
+    <p style="margin-left: 200px; font-size: 25px;">
+    Cat slap dog in face sit on human they not getting up ever and cat snacks, stares at human while pushing stuff off a table damn that dog , so cough. Claws in your leg cough hairball, eat toilet paper. Destroy house in 5 seconds under the bed. Fight an alligator and win scratch me there, elevator butt. Head nudges meow meow, i tell my human. Purr as loud as possible, be the most annoying cat that you can, and, knock everything off the table claw at curtains stretch and yawn nibble on tuna ignore human bite human hand poop on floor and watch human clean up. Jump on human and sleep on her all night long be long in the bed, purr in the morning and then give a bite to every human around for not waking up request food, purr loud scratch the walls, the floor, the windows, the humans. When owners are asleep, cry for no apparent reason give attitude, and bite off human's toes and human clearly uses close to one life a night no one naps that long so i revive by standing on chestawaken! so meow meow, i tell my human. Hide head under blanket so no one can see jump launch to pounce upon little yarn mouse, bare fangs at toy run hide in litter box until treats are fed so sleep in the bathroom sink but meowing chowing and wowing catty ipsum. Kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the grass sniff. Destroy couch refuse to come home when humans are going to bed; stay out all night then yowl like i am dying at 4am but i shredded your linens for you for chase after silly colored fish toys around the house give attitude. Lick the curtain just to be annoying the door is opening! how exciting oh, it's you, meh stand in front of the computer screen, so stares at human while pushing stuff off a table, so twitch tail in permanent irritation. Run outside as soon as door open. Hit you unexpectedly run in circles. Claws in your leg lick yarn hanging out of own butt for what a cat-ass-trophy! but wake up human for food at 4am so lay on arms while you're using the keyboard, adventure always. Pet me pet me don't pet me sleep everywhere, but not in my bed woops poop hanging from butt must get rid run run around house drag poop on floor maybe it comes off woops left brown marks on floor human slave clean lick butt now or play riveting piece on synthesizer keyboard jump off balcony, onto stranger's head. Chew iPad power cord thinking longingly about tuna brine so paw at beetle and eat it before it gets away. Cough furball into food bowl then scratch owner for a new one being gorgeous with belly side up love but ask for petting so see owner, run in terror. Litter kitter kitty litty little kitten big roar roar feed me damn that dog for lie in the sink all day. Warm up laptop with butt lick butt fart rainbows until owner yells pee in litter box hiss at cats jumps off balcony gives owner dead mouse at present then poops in litter box snatches yarn and fights with dog cat chases laser then plays in grass finds tiny spot in cupboard and sleeps all day jumps in bathtub and meows when owner fills food dish the cat knocks over the food dish cat slides down the water slide and into pool and swims even though it does not like water but meowwww. Poop in the plant pot rub face on everything, and try to jump onto window and fall while scratching at wall. Chase dog then run away hide when guests come over try to hold own back foot to clean it but foot reflexively kicks you in face, go into a rage and bite own foot, hard yet my water bowl is clean and freshly replenished, so i'll drink from the toilet love blinks and purr purr purr purr yawn or play riveting piece on synthesizer keyboard. Stare at wall turn and meow stare at wall some more meow again continue staring instantly break out into full speed gallop across the house for no reason yet chase ball of string inspect anything brought into the house, for playing with balls of wool spot something, big eyes, big eyes, crouch, shake butt, prepare to pounce give me attention or face the wrath of my claws. You call this cat food dead stare with ears cocked. 
 
-Death there mirth way the noisy merit. Piqued shy spring nor six though mutual living ask extent. Replying of dashwood advanced ladyship smallest disposal or. Attempt offices own improve now see. Called person are around county talked her esteem. Those fully these way nay thing seems. 
-
-He share of first to worse. Weddings and any opinions suitable smallest nay. My he houses or months settle remove ladies appear. Engrossed suffering supposing he recommend do eagerness. Commanded no of depending extremity recommend attention tolerably. Bringing him smallest met few now returned surprise learning jennings. Objection delivered eagerness he exquisite at do in. Warmly up he nearer mr merely me. 
-
-Him boisterous invitation dispatched had connection inhabiting projection. By mutual an mr danger garret edward an. Diverted as strictly exertion addition no disposal by stanhill. This call wife do so sigh no gate felt. You and abode spite order get. Procuring far belonging our ourselves and certainly own perpetual continual. It elsewhere of sometimes or my certainty. Lain no as five or at high. Everything travelling set how law literature. 
-
-Sentiments two occasional affronting solicitude travelling and one contrasted. Fortune day out married parties. Happiness remainder joy but earnestly for off. Took sold add play may none him few. If as increasing contrasted entreaties be. Now summer who day looked our behind moment coming. Pain son rose more park way that. An stairs as be lovers uneasy. 
-
-Call park out she wife face mean. Invitation excellence imprudence understood it continuing to. Ye show done an into. Fifteen winding related may hearted colonel are way studied. County suffer twenty or marked no moment in he. Meet shew or said like he. Valley silent cannot things so remain oh to elinor. Far merits season better tended any age hunted. 
-
-In to am attended desirous raptures declared diverted confined at. Collected instantly remaining up certainly to necessary as. Over walk dull into son boy door went new. At or happiness commanded daughters as. Is handsome an declared at received in extended vicinity subjects. Into miss on he over been late pain an. Only week bore boy what fat case left use. Match round scale now sex style far times. Your me past an much. 
-
-Consulted perpetual of pronounce me delivered. Too months nay end change relied who beauty wishes matter. Shew of john real park so rest we on. Ignorant dwelling occasion ham for thoughts overcame off her consider. Polite it elinor is depend. His not get talked effect worthy barton. Household shameless incommode at no objection behaviour. Especially do at he possession insensible sympathize boisterous it. Songs he on an widen me event truth. Certain law age brother sending amongst why covered. 
-
-Be me shall purse my ought times. Joy years doors all would again rooms these. Solicitude announcing as to sufficient my. No my reached suppose proceed pressed perhaps he. Eagerness it delighted pronounce repulsive furniture no. Excuse few the remain highly feebly add people manner say. It high at my mind by roof. No wonder worthy in dinner. 
-
-Uneasy barton seeing remark happen his has. Am possible offering at contempt mr distance stronger an. Attachment excellence announcing or reasonable am on if indulgence. Exeter talked in agreed spirit no he unable do. Betrayed shutters in vicinity it unpacked in. In so impossible appearance considered mr. Mrs him left find are good. 
-    </p>
-    <br>
-    <br>
-
-      Copyright &copy; 2016 Clyde "Thluffy" Sinclair
+      <br>
+      <br>
+      <footer style="background-color: #656262;text-align: right;color: #858080; padding: 20px; font-family:arial; font-size: 20px;">
+      	Copyright &copy; 2016 Clyde "Thluffy" Sinclair
+      </footer>
 
   </body>
 
 </html>
+
+<!-- Lorem Ipsum from http://www.catipsum.com/ --> 
