--- a/21_fd_sublimeKittens_zhangI-petersT/bazinga.html
+++ b/21_fd_sublimeKittens_zhangI-petersT/bazinga.html
@@ -1,12 +1,18 @@
 <!doctype html>
-<html class="no-js" lang="en" dir="ltr">
+<!--
+tooltips (media) ivan
+callout (containers) ivan
+top bar (navigation) theodore
+button (controls) theodore
+flexbox alignment (utilities) ivan
+grid xy (general) theodore 
+-->
+
+
+<html>
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foundation Demo</title>
-    <link rel="stylesheet" href="css/foundation.css">
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.5.0-rc.4/css/foundation.css">
   </head>
   <body>
     <div class="grid-container">
